0.14.0.AB (PRE-RELEASE):
-----------------------
- PENDING


0.14.0.AA (13 Jun 2023):
-----------------------
- Synced with Upstream v0.14.0
- Updates Deprecated EFI 1.x Protocols
  * Misc deprecated protocols aligned with UEFI 2.x specs
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Adds `HelpIcon` Feature
  * Improves loading speed by preferring the current theme's generic/default loader icons
  * Enabled by default but can be disabled using a new `decline_help_icon` configuration token
- Adds `GZippedLoaders` Feature
  * Stub implementation of upstream feature focused on the ARM architecture
- Adds Misc Upstream Changes/Fixes
  * Adoption of the RefindPlus `FollowSymlinks` Feature
  * `also_scan_dirs` Volume Specification Bugfix
    - https://sf.net/p/refind/code/ci/fde8116021e1c6ea7edaf3fae15fced47bbb38cf
    - https://sf.net/p/refind/discussion/general/thread/b411f33f37
  * Malformed `refind_linux.conf` Freeze Bugfix
    - https://sf.net/p/refind/code/ci/ebe510a5fcdc10fc04f90e0976c47de54b8c767e
  * Parallel FS Driver GNU-EFI Build Limitation
    - https://sf.net/p/refind/code/ci/dc211965727921bf8e9440fdab5e147795ce9584
  * Memory leak and garbled JPEG when compiled on some Linux distributions
    - https://sf.net/p/refind/code/ci/8825e5e815b4be3708edd7b8d9fa3ea658094d3b
  * Apparent Memory Allocation Conflict
    - https://sf.net/p/refind/code/ci/5e2d0ac3fb76a8daab3a8199d0b0c52dc792b84f
  * Upstream `LinuxPrefixes` Feature
    - https://sf.net/p/refind/code/ci/d5c0a48a01427ed7a3cb3eb324c59fb965358b1d
- Fixes `ReloadGOP` Feature
  * A regression had meant that the feature was not active
  * This bug was introduced in v0.13.3.AD (Commit dc642c6)
- Improves `SupplyNVME` Feature
  * Further isolated from other code
- Improves `SupplyAPFS` Feature
  * Now run after device connection to ensure APFS availability
  * This should also resolve availability with some third party flashed GPUs